--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.16.3",
@@ -20,17 +21,21 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "next": "13.3.4",
+    "nextjs-progressbar": "^0.0.16",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-loading-skeleton": "^3.3.1",
     "react-query": "^3.39.3",
+    "react-redux": "^8.0.5",
+    "react-redux-toastr": "^7.6.11",
     "sass": "^1.62.1",
     "typescript": "5.0.4"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/react-redux-toastr": "^7.6.2",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2"
   }
