--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "classnames": "^2.3.2",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "js-cookie": "^3.0.5",
     "next": "13.3.4",
     "nextjs-progressbar": "^0.0.16",
     "postcss": "8.4.23",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/js-cookie": "^3.0.3",
     "@types/react-redux-toastr": "^7.6.2",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2"
