--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "html-to-draftjs": "^1.5.0",
     "js-cookie": "^3.0.5",
     "next": "13.3.4",
     "nextjs-progressbar": "^0.0.16",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-loading-skeleton": "^3.3.1",
@@ -33,11 +37,16 @@
     "react-redux": "^8.0.5",
     "react-redux-toastr": "^7.6.11",
     "sass": "^1.62.1",
+    "string-strip-html": "^13.4.1",
     "typescript": "5.0.4"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/draft-js": "^0.11.10",
+    "@types/draftjs-to-html": "^0.8.1",
+    "@types/html-to-draftjs": "^1.4.0",
     "@types/js-cookie": "^3.0.3",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "@types/react-redux-toastr": "^7.6.2",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2"
