--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-redux-toastr": "^7.6.11",
+    "react-select": "^5.7.3",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.62.1",
     "string-strip-html": "^13.4.1",
     "typescript": "5.0.4"
