--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "draftjs-to-html": "^0.9.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "html-react-parser": "^3.0.16",
     "html-to-draftjs": "^1.5.0",
     "js-cookie": "^3.0.5",
     "next": "13.3.4",
