--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-redux": "^8.0.5",
     "react-redux-toastr": "^7.6.11",
     "react-select": "^5.7.3",
+    "react-star-rating-component": "^1.4.1",
     "react-transition-group": "^4.4.5",
     "sass": "^1.62.1",
     "string-strip-html": "^13.4.1",
@@ -51,6 +52,7 @@
     "@types/js-cookie": "^3.0.3",
     "@types/react-draft-wysiwyg": "^1.13.4",
     "@types/react-redux-toastr": "^7.6.2",
+    "@types/react-star-rating-component": "^1.4.1",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2"
   }
